--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -98,10 +98,7 @@
     </section>
 </main>
 
-<a href="#"
-   class="back-to-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-short"></i>
-</a>
+<div th:replace="~{go_up}"></div>
 
 <div th:replace="~{footer}"></div>
 <div th:replace="~{scripts}"></div>
