--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -37,10 +37,7 @@
                             <!-- Username-->
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">Username</label>
-                                <div class="col-sm-10" th:if="*{username}">
-                                    <label class="col-sm-2 col-form-label" th:text="*{username}"></label>
-                                </div>
-                                <div class="col-sm-10" th:unless="*{username}">
+                                <div class="col-sm-10">
                                     <div class="input-group mb-3">
                                       <span class="input-group-text"
                                             id="basic-addon1">@</span>
@@ -70,17 +67,17 @@
                                 </div>
                             </div>
 
-                            <!-- Document upload -->
+                            <!-- UserDocument upload -->
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">Documents Upload</label>
                                 <div class="col-sm-10">
                                     <input class="form-control"
                                            type="file"
                                            id="formFile"
-                                           th:field="*{document}"
+                                           th:field="*{userDocument}"
                                            accept="image/*,video/*,.pdf">
-                                    <span th:if="${#fields.hasErrors('document')}"
-                                          th:errors="*{document}"
+                                    <span th:if="${#fields.hasErrors('userDocument')}"
+                                          th:errors="*{userDocument}"
                                           class="error"></span>
                                 </div>
                             </div>
