--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -155,8 +155,8 @@
                   <div id="reportsChart"></div>
 
                   <script>
-                    document.addEventListener("DOMContentLoaded", () => {
-                      new ApexCharts(document.querySelector("#reportsChart"), {
+                    userDocument.addEventListener("DOMContentLoaded", () => {
+                      new ApexCharts(userDocument.querySelector("#reportsChart"), {
                         series: [{
                           name: 'Sales',
                           data: [31, 40, 28, 51, 42, 82, 56],
@@ -461,8 +461,8 @@
               <div id="budgetChart" style="min-height: 400px;" class="echart"></div>
 
               <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                  var budgetChart = echarts.init(document.querySelector("#budgetChart")).setOption({
+                userDocument.addEventListener("DOMContentLoaded", () => {
+                  var budgetChart = echarts.init(userDocument.querySelector("#budgetChart")).setOption({
                     legend: {
                       data: ['Allocated Budget', 'Actual Spending']
                     },
@@ -535,8 +535,8 @@
               <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
 
               <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                  echarts.init(document.querySelector("#trafficChart")).setOption({
+                userDocument.addEventListener("DOMContentLoaded", () => {
+                  echarts.init(userDocument.querySelector("#trafficChart")).setOption({
                     tooltip: {
                       trigger: 'item'
                     },
