--- a/src/main/resources/templates/fragments/general_input.html
+++ b/src/main/resources/templates/fragments/general_input.html
@@ -1,3 +1,4 @@
+<!-- input textfield -->
 <div th:fragment="input_field(fieldName, title)">
   <div class="row mb-3">
     <label class="col-sm-2 col-form-label"
@@ -6,6 +7,40 @@
       <input type="text"
              class="form-control"
              th:field="*{__${fieldName}__}">
+      <span th:if="${#fields.hasErrors(fieldName)}"
+            th:errors="*{__${fieldName}__}"
+            class="error"></span>
+    </div>
+  </div>
+</div>
+
+<!-- TextArea -->
+<div th:fragment="input_text_Area(fieldName, title)">
+  <div class="row mb-3">
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1"
+             th:text="${title}"></label>
+      <textarea class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+                th:field="*{__${fieldName}__}"></textarea>
+      <span th:if="${#fields.hasErrors(fieldName)}"
+            th:errors="*{__${fieldName}__}"
+            class="error"></span>
+    </div>
+  </div>
+</div>
+
+<!-- UserDocument Upload -->
+<div th:fragment="document_upload_input_field(fieldName, title)">
+  <div class="row mb-3">
+    <label class="col-sm-2 col-form-label">Product Image</label>
+    <div class="col-sm-10">
+      <input class="form-control"
+             type="file"
+             id="formFile"
+             th:field="*{__${fieldName}__}"
+             accept="image/*,video/*,.pdf">
       <span th:if="${#fields.hasErrors(fieldName)}"
             th:errors="*{__${fieldName}__}"
             class="error"></span>
