--- a/src/main/resources/templates/submit_button.html
+++ b/src/main/resources/templates/submit_button.html
@@ -1,5 +1,7 @@
 <div class="row mb-3">
   <div class="col-sm-10">
-    <input type="submit" class="btn btn-primary" value="Submit Form">
+    <input type="submit"
+           class="btn btn-primary"
+           value="Submit">
   </div>
 </div>
