--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -83,6 +83,13 @@
                         <span>Create Product</span>
                     </a>
                 </li>
+
+                <li>
+                    <a th:href="@{/products}">
+                        <i class="bi bi-list-ul sidebar-icon"></i>
+                        <span>Products</span>
+                    </a>
+                </li>
             </ul>
         </li>
 
