--- a/src/main/resources/templates/create_company_profile.html
+++ b/src/main/resources/templates/create_company_profile.html
@@ -42,8 +42,8 @@
 
                             <!-- Designation -->
                             <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Designation</label>
-                                <div class="col-sm-10">
+                                <label class="col-sm-4 col-form-label">Designation</label>
+                                <div class="col-sm-8">
                                     <select class="form-select"
                                             aria-label="Default select example"
                                             th:field="*{designationId}">
@@ -61,8 +61,8 @@
 
                             <!-- Currency -->
                             <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Salary Currency</label>
-                                <div class="col-sm-10">
+                                <label class="col-sm-4 col-form-label">Salary Currency</label>
+                                <div class="col-sm-8">
                                     <select class="form-select"
                                             aria-label="Default select example"
                                             id="CurrencyDropdownMenu"
@@ -85,7 +85,13 @@
                             <div th:include="fragments/create_job_info_fragments :: input_field(fieldName='houseRent', title='House Rent')"></div>
 
                             <!-- Submit -->
-                            <div th:replace="~{submit_button}"></div>
+                            <div class="row">
+                                <div class="col-sm-10">
+                                    <input type="submit"
+                                           class="btn btn-primary"
+                                           value="Submit">
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
