--- a/src/main/resources/templates/submit_button.html
+++ b/src/main/resources/templates/submit_button.html
@@ -1,4 +1,4 @@
-<div class="row mb-3">
+<div class="row form-group">
   <div class="col-sm-10">
     <input type="submit"
            class="btn btn-primary"
