--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -1,13 +1,27 @@
 <!-- Vendor JS Files -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script th:src="@{/resource/vendor/apexcharts/apexcharts.min.js}"></script>
-<script th:src="@{/resource/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{/resource/vendor/bootstrap/js/bootstrap.js}"></script>
-<script th:src="@{/resource/vendor/chart.js/chart.umd.js}"></script>
-<script th:src="@{/resource/vendor/echarts/echarts.min.js}"></script>
-<script th:src="@{/resource/vendor/quill/quill.js}"></script>
-<script th:src="@{/resource/vendor/simple-datatables/simple-datatables.js}"></script>
-<script th:src="@{/resource/vendor/tinymce/tinymce.min.js}"></script>
+<!--<script th:src="@{/resource/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/apexcharts/apexcharts.min.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/bootstrap/js/bootstrap.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/chart.js/chart.umd.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/echarts/echarts.min.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/quill/quill.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/simple-datatables/simple-datatables.js}"></script>-->
+<!--<script th:src="@{/resource/vendor/tinymce/tinymce.min.js}"></script>-->
 
-    <!-- Template Main JS File -->
-<script th:src="@{/resource/js/main.js}"></script>
+<!--    &lt;!&ndash; Template Main JS File &ndash;&gt;-->
+<!--<script th:src="@{/resource/js/main.js}"></script>-->
+
+
+
+<!-- new -->
+ <!-- Vendor JS Files -->
+ <script src="/resource/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+ <script src="/resource/vendor/apexcharts/apexcharts.min.js"></script>
+ <script src="/resource/vendor/chart.js/chart.umd.js"></script>
+ <script src="/resource/vendor/echarts/echarts.min.js"></script>
+ <script src="/resource/vendor/quill/quill.js"></script>
+ <script src="/resource/vendor/simple-datatables/simple-datatables.js"></script>
+ <script src="/resource/vendor/tinymce/tinymce.min.js"></script>
+
+<!-- Template Main JS File -->
+<script src="/resource/js/main.js"></script>
