--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -8,13 +8,10 @@
   <title>Dashboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
-
 </head>
 
 <body>
  <div th:replace="~{links}"></div>
- <div th:replace="~{scripts}"></div>
  <div th:replace="~{topbar}"></div>
  <div th:replace="~{sidebar}"></div>
 
@@ -155,8 +152,8 @@
                   <div id="reportsChart"></div>
 
                   <script>
-                    userDocument.addEventListener("DOMContentLoaded", () => {
-                      new ApexCharts(userDocument.querySelector("#reportsChart"), {
+                    document.addEventListener("DOMContentLoaded", () => {
+                      new ApexCharts(document.querySelector("#reportsChart"), {
                         series: [{
                           name: 'Sales',
                           data: [31, 40, 28, 51, 42, 82, 56],
@@ -461,8 +458,8 @@
               <div id="budgetChart" style="min-height: 400px;" class="echart"></div>
 
               <script>
-                userDocument.addEventListener("DOMContentLoaded", () => {
-                  var budgetChart = echarts.init(userDocument.querySelector("#budgetChart")).setOption({
+                document.addEventListener("DOMContentLoaded", () => {
+                  var budgetChart = echarts.init(document.querySelector("#budgetChart")).setOption({
                     legend: {
                       data: ['Allocated Budget', 'Actual Spending']
                     },
@@ -535,8 +532,8 @@
               <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
 
               <script>
-                userDocument.addEventListener("DOMContentLoaded", () => {
-                  echarts.init(userDocument.querySelector("#trafficChart")).setOption({
+                document.addEventListener("DOMContentLoaded", () => {
+                  echarts.init(document.querySelector("#trafficChart")).setOption({
                     tooltip: {
                       trigger: 'item'
                     },
@@ -658,7 +655,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
   </a>
-
+ <div th:replace="~{scripts}"></div>
 </body>
 
 </html>
