--- a/src/main/resources/templates/links.html
+++ b/src/main/resources/templates/links.html
@@ -1,19 +1,20 @@
+
 <!-- Favicons -->
-<link th:href="@{/resource/img/favicon.png}" rel="icon">
-<link th:href="@{/resource/img/apple-touch-icon.png}" rel="apple-touch-icon">
+<link href="/resource/img/favicon.png" rel="icon">
+<link href="/resource/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Google Fonts -->
 <link href="https://fonts.gstatic.com" rel="preconnect">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
 <!-- Vendor CSS Files -->
-<link th:href="@{/resource/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/boxicons/css/boxicons.min.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/quill/quill.snow.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/quill/quill.bubble.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/remixicon/remixicon.css}" rel="stylesheet">
-<link th:href="@{/resource/vendor/simple-datatables/style.css}" rel="stylesheet">
+<link href="/resource/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/resource/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+<link href="/resource/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+<link href="/resource/vendor/quill/quill.snow.css" rel="stylesheet">
+<link href="/resource/vendor/quill/quill.bubble.css" rel="stylesheet">
+<link href="/resource/vendor/remixicon/remixicon.css" rel="stylesheet">
+<link href="/resource/vendor/simple-datatables/style.css" rel="stylesheet">
 
 <!-- Template Main CSS File -->
-<link th:href="@{/resource/css/style.css}" rel="stylesheet">
+<link href="/resource/css/style.css" rel="stylesheet">
